--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-        "../app/actions/getOverviewData.tsx": {
+        "app/actions/getOverviewData.tsx": {
             "maxDuration": 60
         }
     }
